# segfault-golang-with-rust

./: Cargo.toml  README.md  main.go
src/: lib.rs
