[package]
name = "segfaulthtml5evergolang"
version = "0.1.0"
authors = ["Joel Wurtz <jwurtz@jolicode.com>"]
edition = "2018"
build = "src/build.rs"

[lib]
name = "segfaulthtml5evergolang"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cbindgen="0.9.1"

[dependencies]
html5ever = "0.24.1"
libc = "0.2.53"
